--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -4,4 +4,5 @@
     <string name="extract">Extract</string>
     <string name="extract_to">Extract To</string>
     <string name="not_selected">Not Selected</string>
+    <string name="selected_file_text">Selected File: %1$s</string>
 </resources>
