--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -56,4 +56,7 @@
     <string name="enter_password">Password eingeben</string>
     <string name="extraction_failed">Extraktion fehlgeschlagen: %1$s</string>
     <string name="zip_creation_success">Zip-Datei erfolgreich erstellt</string>
+    <string name="sevenz_creation_success">7z-Datei erfolgreich erstellt</string>
+    <string name="sevenz_creation_failed">Fehler beim Erstellen der 7z-Datei</string>
+    <string name="compress_sevenz">7z komprimieren</string>
 </resources>
