--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -66,7 +66,11 @@
     <string name="enter_password">Introduzca la contraseña</string>
     <string name="extraction_failed">Error de extracción: %1$s</string>
     <string name="zip_creation_success">El archivo Zip fue creado correctamente</string>
-    <string name="sevenz_creation_success">El archivo 7z fue creado correctamente</string>
-    <string name="sevenz_creation_failed">Error al crear el archivo 7z</string>
     <string name="compress_sevenz">Comprimir en 7z</string>
+    <string name="thread_count">Número de hilos</string>
+    <string name="enter_name_of_archive_optional">Nombre del archivo (opcional)</string>
+    <string name="sevenz_creation_success">Archivo 7z creado con éxito</string>
+    <string name="sevenz_creation_failed">Error al crear el archivo 7z</string>
+    <string name="max_available_thread">0 para el máximo de hilos disponibles</string>
+    <string name="solid_compression">Compresión sólida</string>
 </resources>
