--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="compression_settings">Compression Settings</string>
     <string name="file_picked_success">File Picked Successfully</string>
     <string name="file_picked_fail">No file selected</string>
-    <string name="settings_info_text">Encrypting files with the AES encryption method is time-consuming. If you have a low end device, it is recommended to use the default method (ZIP_STANDARD).</string>
+    <string name="settings_info_text">The default encryption method for files is AES, which provides a high level of security. However, please be aware that AES encryption can be time-consuming, particularly on lower-end devices.\n\nFor users with less powerful devices, an alternative like ZIP_STANDARD can be use. However, please note that this method does not offer the same level of security as AES.\n\nIf security is your primary concern, we strongly recommend using AES despite its longer processing time.</string>
     <string name="ok">OK</string>
     <string name="output_directory_cleared">Output directory cleared</string>
     <string name="selected_file_cleared">Selected File Cleared</string>
