--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
   ~     You should have received a copy of the GNU General Public License
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   --><resources>
-    <string name="app_name">ZipXtract</string>
+    <string name="app_name">ZipXtract FD</string>
     <string name="pick_file">Pick File</string>
     <string name="extract">Extract</string>
     <string name="extract_to">Extract To</string>
