add extraction support for - "tar.bz2", "tar.gz", "tar.lz4", "tar.lzma", "tar.sz", "tar.xz", "tar.z", "tar.zstd"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,6 @@
     <string name="size">Size</string>
     <string name="time_of_creation">Time of creation</string>
     <string name="extension">Extension</string>
+    <string name="unsupported_compression_format">Unsupported compression format</string>
+    <string name="extraction_ongoing">Extracting file</string>
 </resources>
