--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -12,7 +12,7 @@
     <string name="selected_files_text">Fichiers sélectionnés : %1$d</string>
     <string name="ethereum">Ethereum</string>
     <string name="folder">Dossier</string>
-    <string name="no_file_selected">Pas de fichier sélectionné</string>
+    <string name="no_file_selected">Aucun fichier sélectionné</string>
     <string name="compression_level">Niveau de compression</string>
     <string name="selected_file_text">Fichuer sélectionné : %1$s</string>
     <string name="version">Version :</string>
@@ -22,7 +22,7 @@
     <string name="pick_file">Choisir un fichier</string>
     <string name="files">Fichiers</string>
     <string name="select">Sélectionner</string>
-    <string name="encryption_method">Méthode d\'encryptage</string>
+    <string name="encryption_method">Méthode de chiffrement</string>
     <string name="percent">%</string>
     <string name="tron">Tron</string>
     <string name="extract">Extraire</string>
@@ -33,14 +33,18 @@
     <string name="file">Fichier</string>
     <string name="bitcoin_cash">Bitcoin Cash</string>
     <string name="bnb_smart_chain">BNB Smart Chain</string>
-    <string name="file_picked_fail">Pas de fichier sélectionné</string>
+    <string name="file_picked_fail">Aucun fichier sélectionné</string>
     <string name="select_output_directory_extract">Veuillez choisir où extraire les fichiers</string>
     <string name="save">Enregistrer</string>
     <string name="copied_to_clipboard">Copié dans le presse-papier</string>
     <string name="password">mot de passe</string>
     <string name="selected_file_cleared">Fichier sélectionné annulé</string>
     <string name="pick_file_extract">Veuillez choisir un fichier à extraire</string>
-    <string name="settings_info_text">La méthode de cryptage par défaut pour les fichiers est AES, qui fournit un niveau élevé de sécurité. Cependant, sachez que le cryptage AES peut prendre du temps, en particulier sur les dispositifs bas de gamme. Pour les utilisateurs avec des appareils moins puissants, une alternative comme Zip_standard peut être utilisée. Cependant, veuillez noter que cette méthode n\'offre pas le même niveau de sécurité que les AES. Si la sécurité est votre principale préoccupation, nous vous recommandons fortement d\'utiliser AES malgré son temps de traitement plus long.</string>
+    <string name="settings_info_text">La méthode de chiffrement par défaut est AES, qui offre un haut niveau de sécurité. Cependant, soyez informés que le chiffrement AES peut être lent à s\'effectuer, et plus particulièrement sur les appareils bas de gamme
+\n
+\nPour les utilisateurs qui possèdent un appareil peu puissant, une alternative comme (ZIP_STANDARD) est envisageable. Notez cependant que cette méthode n\'offre pas le même niveau de sécurité que le chiffrement AES.
+\n
+\nSi la sécurité fait partie de vos priorités, nous vous recommandons grandement d\'utiliser le chiffrement AES, malgré son processus de travail plus long.</string>
     <string name="file_picked_success">Fichiier sélectionné avec succès</string>
     <string name="output_file_name">extrantZip.zip</string>
     <string name="select_output_directory">Veuillez choisir le dossier de sortie</string>
@@ -66,9 +70,16 @@
     <string name="enter_password">Entrez le mot de passe</string>
     <string name="extraction_failed">Échec de l\'extraction :</string>
     <string name="zip_creation_success">Fichier Zip créé avec succès</string>
-    <string name="sevenz_creation_success">Fichier 7z créé avec succès</string>
-    <string name="sevenz_creation_failed">Erreur pendant la création du fichier 7z</string>
-    <string name="compress_sevenz">Compresser au format 7z</string>
-    <string name="please_wait_end_of_job">Veuillez patienter… si vous avez sélectionné des fichiers volumineux, cela peut prendre quelques instants</string>
-
+    <string name="sevenz_creation_success">Archive 7z créée avec succès</string>
+    <string name="sevenz_creation_failed">Erreur lors de la création de l\'archive 7z</string>
+    <string name="compress_sevenz">Compresser en 7z</string>
+    <string name="thread_count">Nombre de fils d\'exécution</string>
+    <string name="max_available_thread">0 pour le numbre maximum de fils disponible</string>
+    <string name="enter_name_of_archive_optional">Entrez le nom de l\'archive (facultatif)</string>
+    <string name="solid_compression">Compression compacte</string>
+    <string name="please_wait_end_of_job">Merci de patienter… Vous avez sélectionné des fichiers lourds, cela peut prendre quelques instants</string>
+    <string name="split_zip">Zip en plusieurs parties</string>
+    <string name="_ten">Valeur par défaut est 64kb</string>
+    <string name="split_size_mb">Taille des parties de Zip</string>
+    <string name="encryption_strength">Puissance de chiffrement</string>
 </resources>
