--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="file_picked_success">Pomyślnie wybrano plik</string>
-    <string name="settings_info_text">Domyślną metodą szyfrowania plików jest AES, który zapewnia wysoki poziom bezpieczeństwa. Należy jednak pamiętać, że szyfrowanie AES może być czasochłonne, szczególnie na urządzeniach z niższej półki.\n\nW przypadku użytkowników ze słabszymi urządzeniami można zastosować alternatywę, taką jak ZIP_STANDARD. Należy jednak pamiętać, że ta metoda nie zapewnia tego samego poziomu bezpieczeństwa co AES.\n\nJeśli bezpieczeństwo jest dla Ciebie najważniejsze, zdecydowanie zalecamy użycie AES pomimo dłuższego czasu przetwarzania.</string>
+    <string name="settings_info_text">Szyfrowanie plików metodą AES jest czasochłonne. Jeżeli korzystasz z niższej klasy urządzenia, zalecane jest używanie domyślnej metody (ZIP_STANDARD).</string>
     <string name="extract">Wypakuj</string>
     <string name="extract_to">Wypakuj do</string>
     <string name="directory_path">Wybrany folder: %1$s</string>
@@ -33,7 +33,7 @@
     <string name="create_zip">Skompresuj do ZIP</string>
     <string name="select_output_directory_extract">Wybierz, gdzie chcesz wypakować pliki</string>
     <string name="invalid_uri">Błędny URI pliku archiwum</string>
-    <string name="extraction_failed">Nie udało się wypakować :</string>
+    <string name="extraction_failed">Nie udało się wypakować:</string>
     <string name="no_password">Brak hasła</string>
     <string name="extraction_success">Plik wypakowany pomyślnie</string>
     <string name="share">Udostępnij link do aplikacji</string>
@@ -55,4 +55,14 @@
     <string name="pick_file">Wybierz plik</string>
     <string name="selected_file_text">Wybrany plik: %1$s</string>
     <string name="folder">Folder</string>
+    <string name="sevenz_creation_success">Pomyślnie stworzono plik 7z</string>
+    <string name="sevenz_creation_failed">Błąd przy tworzeniu pliku 7z</string>
+    <string name="compress_sevenz">Kompresuj do pliku 7z</string>
+    <string name="thread_count">Liczba wątków</string>
+    <string name="max_available_thread">0 dla wszystkich dostępnych wątków</string>
+    <string name="enter_name_of_archive_optional">Wprowadź nazwę archiwum (opcjonalnie)</string>
+    <string name="archive_file_name_failed">Nie udało się uzyskać nazwy pliku archiwum</string>
+    <string name="encryption_strength">Siła szyfrowania</string>
+    <string name="_ten">Domyślnie 64kb</string>
+    <string name="please_wait_end_of_job">Proszę poczekać… Jeżeli wybrano pliki o dużym rozmiarze może to potrwać kilka chwil</string>
 </resources>
